# zynqmp_linux

./: .gitignore  README.md  hw1_v1.tcl  hw1_v1.xdc  hw1_v2.tcl  hw2_v1.tcl  hw2_v1.xdc  hw2_v2.tcl  hw3_v1.tcl  hw3_v1.xdc  hw3_v2.tcl  hw4_v1.tcl  hw4_v2.tcl  hw5_v1.tcl  hw5_v2.tcl  hw5_v2.xdc
petalinux/: lab1.txt  lab2.txt  lab3.txt  lab4.txt  lab5.txt  lab6.txt
petalinux/meta-custom/conf/: layer.conf
petalinux/meta-custom/recipes-apps/autostart/: autostart.bb
petalinux/meta-custom/recipes-apps/gpiotest/: files  gpiotest.bb
petalinux/meta-inipro/conf/: layer.conf
petalinux/workspaces/gpio_test/: CMakeLists.txt  gpio_utils.c  main.c
petalinux/workspaces/hello_qt/: CMakeLists.txt  main.cpp  main.qml
petalinux/workspaces/hello_world/: CMakeLists.txt  main.c
petalinux/workspaces/i2c_test/: CMakeLists.txt  main.c
petalinux/workspaces/pmod8ld/: Makefile  pmod8ld.c
petalinux/workspaces/pmodals/: Makefile  pmodals.c
petalinux/workspaces/pmodtmp2/: Makefile  pmodtmp2.c
petalinux/workspaces/spi_test/: CMakeLists.txt  main.c
petalinux/workspaces/vadd/: CMakeLists.txt  PATCH.txt  main.cpp  xvadd.h  xvadd_hw.h  xvadd_linux.c
petalinux/workspaces/vadd2/: CMakeLists.txt  main.cpp
repo/vadd/: component.xml
repo/vadd/doc/: ReleaseNotes.txt
xsa/hw1_v1/: hw1_wrapper.xsa
xsa/hw1_v2/: hw1_wrapper.xsa
xsa/hw2_v1/: hw2_wrapper.xsa
xsa/hw2_v2/: hw2_wrapper.xsa
xsa/hw3_v1/: hw3_wrapper.xsa
xsa/hw3_v2/: hw3_wrapper.xsa
xsa/hw4_v1/: hw4_wrapper.xsa
xsa/hw4_v2/: hw4_wrapper.xsa
xsa/hw5_v1/: hw5_wrapper.xsa
xsa/hw5_v2/: hw5_wrapper.xsa
(+78 files in other folders)
